@@ -1,3 +1,8 @@
+2006-03-22  Jim garlick <garlick@llnl.gov>
+
+	* src/xcpucmd.c : Use new local exec facility and set args to
+	  run /bin/sh -c 'cmd'.
+	
 2006-03-22  Mark Grondona <mgrondona@llnl.gov>
 	* src/common/split.c, src/common/split.h, src/pdsh/opt.c : 
 	  Move list_join() from pdsh/opt.c to common/split.c.
